# sensor_data_platform

./: Cargo.toml  Dockerfile  edge_telemetry.db  edge_telemetry.db-journal
deploy/: mock-sensor-pod.yaml  mock-sensors-replica-set.yaml  sensorsd.yaml
src/: lib.rs  main.rs
